//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Task Flow API" {
  database_type: ''
  Note: ''
}

Table users {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  passwordHash String [not null]
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  tasks tasks [not null]
}

Table tasks {
  id String [pk]
  title String [not null]
  description String
  deadline DateTime
  status TaskStatus [not null, default: 'BACKLOG']
  isPriority Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user users [not null]
  attachments attachments [not null]
}

Table attachments {
  id String [pk]
  fileName String [not null]
  fileUrl String [not null]
  fileType String [not null]
  createdAt DateTime [default: `now()`, not null]
  taskId String [not null]
  task tasks [not null]
}

Enum Role {
  USER
  ADMIN
}

Enum TaskStatus {
  BACKLOG
  PENDING
  IN_PROGRESS
  COMPLETED
}

Ref: tasks.userId > users.id [delete: Cascade]

Ref: attachments.taskId > tasks.id [delete: Cascade]